# tern-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/: __init__.py
src/api/: __init__.py
src/examples/: basic_inference.py
src/tern/: __init__.py
src/tern/api/: __init__.py  convert.py  deploy.py  output.py  pack.py
tests/: test_e2e.py  test_e2e_day2.py  test_pack_e2e.py  test_streaming.py
